# adiscord

./: Cargo.toml  README.md  todo.md
adiscord/: Cargo.toml  README.md
adiscord-checker/: Cargo.toml  script.js
adiscord-checker/checks/: application-role-connection-metadata.json  application.json  audit-log.json  auto-moderation.json  channel.json  emoji.json  guild-scheduled-event.json  guild-template.json  guild.json  invite.json  stage-instance.json  sticker.json  user.json  voice.json  webhook.json
adiscord-checker/src/: main.rs
adiscord-intents/: Cargo.toml  README.md
adiscord-intents/src/: lib.rs
adiscord-intents/tests/: generate.rs
adiscord-test/: Cargo.toml
adiscord-test/src/: main.rs
adiscord-types/: Cargo.toml  README.md
adiscord-types/src/: lib.rs
adiscord-types/src/api/: application.rs  audit.rs  auto_moderation.rs  channel.rs  embed.rs  emoji.rs  feature.rs  forum.rs  guild.rs  integration.rs  message.rs  mod.rs  reaction.rs  role.rs  stage.rs  sticker.rs  team.rs  thread.rs  user.rs  voice.rs  webhook.rs
adiscord-types/src/gateway/: activity.rs  application.rs  bot.rs  channel.rs  client.rs  emoji.rs  guild.rs  identify.rs  integration.rs  invite.rs  member.rs  message.rs  mod.rs  opcode.rs  presence.rs  reaction.rs  ready.rs  role.rs  scheduled.rs  sticker.rs  thread.rs  typing.rs  user.rs  voice.rs  webhook.rs
adiscord/src/: gateway.rs  lib.rs
adiscord/src/channel/: get.rs  mod.rs
adiscord/src/channels/: get.rs  mod.rs
adiscord/src/channels/message/: get.rs
adiscord/src/channels/messages/: get.rs
adiscord/src/gateway/: mod.rs  types.rs
adiscord/src/gateway/events/types/: application.rs  channels.rs  guilds.rs  mod.rs  ready.rs  thread.rs  webhooks.rs
adiscord/src/guild/: get_members.rs  mod.rs
adiscord/src/guilds/: get.rs
adiscord/src/guilds/channels/: get.rs
adiscord/src/guilds/emojis/: get.rs
adiscord/src/guilds/members/: get.rs
adiscord/src/guilds/preview/: get.rs
adiscord/src/guilds/stickers/: get.rs
adiscord/src/guilds/webhooks/: get.rs
adiscord/src/sticker/: gets.rs
adiscord/src/types/: feature.rs  mod.rs
adiscord/src/types/application/: flags.rs  install_params.rs
adiscord/src/types/channel/: attachment.rs  flags.rs  forum_layout.rs  mention.rs  mod.rs  overwrite.rs  sort_order.rs  video.rs
adiscord/src/types/channel/embed/: author.rs  field.rs  footer.rs  image.rs  provider.rs  thumbnail.rs
adiscord/src/types/channel/forum/: tags.rs
adiscord/src/types/channel/message/: component.rs  mod.rs  reference.rs  role_subscription_data.rs
adiscord/src/types/channel/message/activity/: mod.rs
adiscord/src/types/channel/message/interaction/: mod.rs
adiscord/src/types/channel/reaction/: mod.rs
adiscord/src/types/channel/thread/: member.rs  metadata.rs
adiscord/src/types/channel/thread/member/: flags.rs  mod.rs
adiscord/src/types/gateway/: mod.rs  opcode.rs
adiscord/src/types/gateway/identify/presence/: mod.rs
adiscord/src/types/gateway/identify/presence/activity/: button.rs
adiscord/src/types/guild/: mfa_level.rs
adiscord/src/types/guild/member/: flags.rs  mod.rs
adiscord/src/types/role/: mod.rs
adiscord/src/types/sticker/: format.rs  item.rs  type.rs
adiscord/src/types/team/: mod.rs
adiscord/src/types/team/member/: mod.rs  state.rs
adiscord/src/types/voice/: region.rs
adiscord/src/types/webhook/: type.rs
adiscord/src/voice/: mod.rs
adiscord/src/voice/regions/: get.rs
src/: gateway.rs  lib.rs  main.rs
src/channel/: get.rs  get_message.rs  get_messages.rs  mod.rs
src/channels/: get.rs  mod.rs
src/emoji/: gets.rs  mod.rs
src/emojis/: gets.rs  mod.rs
src/gateway/: bot.rs  heartbeat.rs  identify.rs  loop_heartbeat.rs  mod.rs  wait_heartbeat.rs
src/guild/: get.rs  get_channels.rs  get_members.rs  get_preview.rs  mod.rs
src/guilds/: get.rs  get_channel.rs  get_channels.rs  get_preview.rs  mod.rs
src/sticker/: gets.rs  mod.rs
src/types/: emoji.rs  feature.rs  mod.rs  test.rs  user.rs
src/types/application/: flags.rs  install_params.rs  mod.rs
src/types/channel/: attachment.rs  flags.rs  forum_layout.rs  mention.rs  mod.rs  overwrite.rs  sort_order.rs  type.rs  video.rs
src/types/channel/embed/: author.rs  field.rs  footer.rs  image.rs  mod.rs  provider.rs  thumbnail.rs  video.rs
src/types/channel/forum/: tags.rs
src/types/channel/message/: component.rs  flags.rs  mod.rs  reference.rs  role_subscription_data.rs  type.rs
src/types/channel/message/activity/: mod.rs  type.rs
src/types/channel/message/interaction/: mod.rs  type.rs
src/types/channel/reaction/: default.rs  mod.rs
src/types/channel/thread/: flags.rs  member.rs  metadata.rs  mod.rs
src/types/channel/thread/member/: flags.rs  mod.rs
src/types/gateway/: mod.rs  opcode.rs
src/types/gateway/bot/: mod.rs  session_start_limit.rs
src/types/gateway/identify/: connection.rs  mod.rs
src/types/gateway/identify/presence/activity/: assets.rs  emoji.rs  mod.rs  party.rs  secrets.rs  timestamps.rs  type.rs
src/types/guild/: default_message_notifications.rs  explicit_content_filter.rs  mfa_level.rs  mod.rs  nsfw_level.rs  premium_tier.rs  preview.rs  system_channel_flags.rs  verification_level.rs
src/types/guild/member/: flags.rs  mod.rs
src/types/guild/welcome_screen/: channels.rs  mod.rs
src/types/role/: mod.rs  tags.rs
src/types/sticker/: format.rs  item.rs  mod.rs  type.rs
src/types/team/: mod.rs
src/types/team/member/: mod.rs  state.rs
src/types/voice/: region.rs
src/types/webhook/: mod.rs  type.rs
src/voice/: get_regions.rs  mod.rs
src/webhook/: gets.rs  mod.rs
