[package]
name = "adiscord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv_codegen = "0.15.0"
reqwest = { version = "0.11.14", features = ["json"] }
serde = "1.0.157"
serde_derive = "1.0.157"
serde_json = "1.0.94"
serde_repr = "0.1.12"
tokio = { version = "1", features = ["full"] }
