[package]
name = "adiscord"
version = "0.0.3"
authors = ["MoskalykA <100430077+MoskalykA@users.noreply.github.com>"]
edition = "2021"
description = "A Discord API wrapper for Rust"
documentation = "https://docs.rs/adiscord"
repository = "https://github.com/MoskalykA/adiscord"
license = "MIT"

[dependencies]
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_repr = "0.1.12"
serde_json = { version = "1.0.95", optional = true }
tungstenite = { version = "0.18.0", features = ["native-tls"], optional = true }
url = { version = "2.3.1", optional = true }
tokio = { version = "1.27.0", features = ["time"], optional = true }

[features]
gateway = ["tungstenite", "url", "serde_json", "tokio"]
