[package]
name = "adiscord-intents"
version = "0.0.1"
authors = ["MoskalykA <100430077+MoskalykA@users.noreply.github.com>"]
edition = "2021"
description = "Calculate the number of intents from a list of enums"
documentation = "https://docs.rs/adiscord-intents"
repository = "https://github.com/MoskalykA/adiscord"
license = "MIT"
