[package]
name = "adiscord-intents"
version = "0.0.2"
authors = ["MoskalykA <100430077+MoskalykA@users.noreply.github.com>"]
edition = "2021"
description = "Calculate the number of intents from a list of enums"
documentation = "https://docs.rs/adiscord-intents"
readme = "README.md"
repository = "https://github.com/MoskalykA/adiscord"
license = "MIT"
