[package]
name = "adiscord-test"
version = "0.0.1"
authors = ["MoskalykA <100430077+MoskalykA@users.noreply.github.com>"]
edition = "2021"
license = "MIT"

[dependencies]
dotenv_codegen = "0.15.0"
tokio = { version = "1.28.2", features = ["rt-multi-thread"] }
adiscord = { version = "0.0.9", features = ["gateway"] }
adiscord-intents = "0.0.4"
