[package]
name = "adiscord-types"
version = "0.0.1"
authors = ["MoskalykA <100430077+MoskalykA@users.noreply.github.com>"]
edition = "2021"
description = "The large list of Discord API types and Gateway types"
documentation = "https://docs.rs/adiscord-types"
repository = "https://github.com/MoskalykA/adiscord"
license = "MIT"

[dependencies]
serde = { version = "1.0.157", features = ["derive"] }
serde_repr = "0.1.12"
serde_json = { version = "1.0.95" }

[features]
gateway = []
