[package]
name = "adiscord-types"
version = "0.0.4"
authors = ["MoskalykA <100430077+MoskalykA@users.noreply.github.com>"]
edition = "2021"
description = "The large list of Discord API types and Gateway types"
documentation = "https://docs.rs/adiscord-types"
readme = "README.md"
repository = "https://github.com/MoskalykA/adiscord"
license = "MIT"

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
serde_repr = "0.1.12"

[features]
gateway = []

[package.metadata.docs.rs]
features = ["gateway"]
